# InformaticaConversion

./: .gitignore  CHANGELOG.md  ICT_Test_Plan_v2.18.docx  Informatica Documentation Pipeline.pptx  LICENSE  SECURITY.md  conversion_pipeline_flowchart.html  generic_component_gaps.docx  informatica_conversion_tool_prompt_v4.md  missing_flows_diagram.html  package-lock.json  package.json  playwright.config.js  sample_data_validator.py  start_server.sh  upload_flow_diagram.html
app/: .env.example  README.md  conftest.py  main.py  mock_gateway.py  pipeline_overview.pptx  requirements.txt  test.http  test_core.py  test_pipeline.py  test_routes.py
docs/: 3A_PROMPT_REFERENCE.md  ARCHITECTURE.md  DESIGN_PATTERN_LIBRARY.md  Informatica Conversion Tool - Best Practices Guide.docx  (+8 more)
etl_patterns/: README.md  config_loader.py  exceptions.py  expression.py  pyproject.toml  schemas.py
etl_patterns/io/: __init__.py  base.py
etl_patterns/io/readers/: db_reader.py  fixed_width_reader.py  flat_file_reader.py
etl_patterns/io/writers/: __init__.py  db_writer.py  flat_file_writer.py
etl_patterns/patterns/: aggregation_load.py  base.py  expression_transform.py  filter_and_route.py  incremental_append.py  lookup_enrich.py  pass_through.py  scd2.py  truncate_and_load.py  union_consolidate.py  upsert.py
etl_patterns/tests/: test_expression.py  test_expression_transform.py  test_incremental_append.py  test_phase3_patterns.py  test_phase4_patterns.py
etl_patterns/utils/: __init__.py  etl_metadata.py  file_lifecycle.py  null_safe.py  string_clean.py  type_cast.py  watermark_manager.py
(+860 files in other folders)
