[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_patterns"
version = "0.1.0"
description = "Config-driven ETL pattern library for Informatica conversion outputs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC BY-NC 4.0" }
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
pyspark = ["pyspark>=3.4"]
dev     = ["pytest>=7.0", "pytest-cov>=4.0", "pandas-stubs>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_patterns*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
